Fixed Images being to big sometimes
Images wouldnt fit in the box and would overlap into other slots

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -361,7 +361,7 @@ body {
     margin: 0 auto;
     margin-top: 15%;
     width: auto;
-    height: auto;
+    height: 100;
     max-width: 100%;
     max-height: 100%;
 }
